--- a/docs/framework/migration-guide/runtime/4.5-4.7.2.md
+++ b/docs/framework/migration-guide/runtime/4.5-4.7.2.md
@@ -4,25 +4,25 @@ ms.date: 04/05/2018
 ms.assetid: 64952ac8-4dc9-4064-9252-dbe221332dd6
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: 3323ae06f5ad885f48ffc9f31019da96859774bd
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: dc6927d948d76c453dd97d8b3009d6a9caa59c6b
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-45-to-472"></a><span data-ttu-id="c2445-102">.NET Framework 4.5 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="c2445-102">Runtime Changes for Migration from .NET Framework 4.5 to 4.7.2</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-45-to-472"></a><span data-ttu-id="4dd85-102">.NET Framework 4.5 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="4dd85-102">Runtime Changes for Migration from .NET Framework 4.5 to 4.7.2</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="c2445-103">.NET Framework 4.5 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="c2445-103">If you are migrating from the .NET Framework 4.5 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="4dd85-103">.NET Framework 4.5 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="4dd85-103">If you are migrating from the .NET Framework 4.5 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="adonet"></a><span data-ttu-id="c2445-104">ADO.NET</span><span class="sxs-lookup"><span data-stu-id="c2445-104">ADO.NET</span></span>
+## <a name="adonet"></a><span data-ttu-id="4dd85-104">ADO.NET</span><span class="sxs-lookup"><span data-stu-id="4dd85-104">ADO.NET</span></span>
 
 [!include[ADO.NET now attempts to automatically reconnect broken SQL connections](~/includes/migration-guide/runtime/adonet/adonet-now-attempts-automatically-reconnect-broken-sql-connections.md)]
 
-## <a name="aspnet"></a><span data-ttu-id="c2445-105">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="c2445-105">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="4dd85-105">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="4dd85-105">ASP.NET</span></span>
 
 [!include[ASP.NET MVC now escapes spaces in strings passed in via route parameters](~/includes/migration-guide/runtime/asp/aspnet-mvc-now-escapes-spaces-strings-passed-via-route-parameters.md)]
 
@@ -32,7 +32,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[Profiling ASP.Net MVC4 apps can lead to Fatal Execution Engine Error](~/includes/migration-guide/runtime/asp/profiling-aspnet-mvc4-apps-can-lead-fatal-execution-engine-error.md)]
 
-## <a name="core"></a><span data-ttu-id="c2445-106">コア</span><span class="sxs-lookup"><span data-stu-id="c2445-106">Core</span></span>
+## <a name="core"></a><span data-ttu-id="4dd85-106">コア</span><span class="sxs-lookup"><span data-stu-id="4dd85-106">Core</span></span>
 
 [!include[Allow Unicode in URIs that resemble UNC shares](~/includes/migration-guide/runtime/core/allow-unicode-uris-that-resemble-unc-shares.md)]
 
@@ -66,7 +66,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[X509Certificate2.ToString(Boolean) does not throw now when .NET cannot handle the certificate](~/includes/migration-guide/runtime/core/x509certificate2tostringboolean-does-not-throw-now-when-net-cannot-handle.md)]
 
-## <a name="data"></a><span data-ttu-id="c2445-107">データ</span><span class="sxs-lookup"><span data-stu-id="c2445-107">Data</span></span>
+## <a name="data"></a><span data-ttu-id="4dd85-107">データ</span><span class="sxs-lookup"><span data-stu-id="4dd85-107">Data</span></span>
 
 [!include[ADO.NET now attempts to automatically reconnect broken SQL connections](~/includes/migration-guide/runtime/adonet/adonet-now-attempts-automatically-reconnect-broken-sql-connections.md)]
 
@@ -74,55 +74,55 @@ ms.lasthandoff: 05/04/2018
 
 [!include[SqlConnection.Open fails on Windows 7 with non-IFS Winsock BSP or LSP present](~/includes/migration-guide/runtime/data/sqlconnectionopen-fails-on-windows-7-with-non-ifs-winsock-bsp-lsp-present.md)]
 
-## <a name="debugger"></a><span data-ttu-id="c2445-108">デバッガー</span><span class="sxs-lookup"><span data-stu-id="c2445-108">Debugger</span></span>
+## <a name="debugger"></a><span data-ttu-id="4dd85-108">デバッガー</span><span class="sxs-lookup"><span data-stu-id="4dd85-108">Debugger</span></span>
 
 [!include[Null coalescer values are not visible in debugger until one step later](~/includes/migration-guide/runtime/debugger/null-coalescer-values-are-not-visible-debugger-until-one-step-later.md)]
 
-## <a name="entity-framework"></a><span data-ttu-id="c2445-109">Entity Framework</span><span class="sxs-lookup"><span data-stu-id="c2445-109">Entity Framework</span></span>
+## <a name="entity-framework"></a><span data-ttu-id="4dd85-109">Entity Framework</span><span class="sxs-lookup"><span data-stu-id="4dd85-109">Entity Framework</span></span>
 
 [!include[EF no longer throws for QueryViews with specific characteristics](~/includes/migration-guide/runtime/ef/ef-no-longer-throws-for-queryviews-with-specific-characteristics.md)]
 
 [!include[Opt-in break to revert from different 4.5 SQL generation to simpler 4.0 SQL generation](~/includes/migration-guide/runtime/ef/opt-in-break-revert-from-different-45-sql-generation-simpler-40.md)]
 
-## <a name="globalization"></a><span data-ttu-id="c2445-110">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="c2445-110">Globalization</span></span>
+## <a name="globalization"></a><span data-ttu-id="4dd85-110">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="4dd85-110">Globalization</span></span>
 
 [!include[Unicode standard version 8.0 categories now supported](~/includes/migration-guide/runtime/globalization/unicode-standard-version-80-categories-now-supported.md)]
 
-## <a name="networking"></a><span data-ttu-id="c2445-111">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="c2445-111">Networking</span></span>
+## <a name="networking"></a><span data-ttu-id="4dd85-111">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="4dd85-111">Networking</span></span>
 
 [!include[ContentDisposition DateTimes returns slightly different string](~/includes/migration-guide/runtime/networking/contentdisposition-datetimes-returns-slightly-different-string.md)]
 
-## <a name="runtime"></a><span data-ttu-id="c2445-112">ランタイム</span><span class="sxs-lookup"><span data-stu-id="c2445-112">Runtime</span></span>
+## <a name="runtime"></a><span data-ttu-id="4dd85-112">ランタイム</span><span class="sxs-lookup"><span data-stu-id="4dd85-112">Runtime</span></span>
 
 [!include[Improved WCF chain trust certificate validation for Net.Tcp certificate authentication](~/includes/migration-guide/runtime/runtime/improved-wcf-chain-trust-certificate-validation-for-nettcp-authentication.md)]
 
-## <a name="security"></a><span data-ttu-id="c2445-113">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="c2445-113">Security</span></span>
+## <a name="security"></a><span data-ttu-id="4dd85-113">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="4dd85-113">Security</span></span>
 
 [!include[RSACng.VerifyHash now returns False for any verification failure](~/includes/migration-guide/runtime/security/rsacngverifyhash-now-returns-false-for-any-verification-failure.md)]
 
 [!include[SignedXml and EncryptedXml Breaking Changes](~/includes/migration-guide/runtime/security/signedxml-encryptedxml-breaking-changes.md)]
 
-## <a name="serialization"></a><span data-ttu-id="c2445-114">シリアル化</span><span class="sxs-lookup"><span data-stu-id="c2445-114">Serialization</span></span>
+## <a name="serialization"></a><span data-ttu-id="4dd85-114">シリアル化</span><span class="sxs-lookup"><span data-stu-id="4dd85-114">Serialization</span></span>
 
 [!include[Exception message has changed for failed DataContract serialization in case of an unknown type](~/includes/migration-guide/runtime/serialization/exception-message-has-changed-for-failed-datacontract-serialization-case-an.md)]
 
 [!include[NetDataContractSerializer fails to deserialize a ConcurrentDictionary serialized with a different .NET version](~/includes/migration-guide/runtime/serialization/netdatacontractserializer-fails-deserialize-concurrentdictionary-serialized.md)]
 
-## <a name="setup-and-deployment"></a><span data-ttu-id="c2445-115">セットアップと配置</span><span class="sxs-lookup"><span data-stu-id="c2445-115">Setup and Deployment</span></span>
+## <a name="setup-and-deployment"></a><span data-ttu-id="4dd85-115">セットアップと配置</span><span class="sxs-lookup"><span data-stu-id="4dd85-115">Setup and Deployment</span></span>
 
 [!include[Product versioning changes in the .NET Framework 4.6 and later versions](~/includes/migration-guide/runtime/setup/product-versioning-changes-net-framework-46-later-versions.md)]
 
 [!include[The .NET Framework 4.6 does not use a 4.5.x.x version when registering itself in the registry](~/includes/migration-guide/runtime/setup/net-framework-46-does-not-use-45xx-version-when-registering-itself-registry.md)]
 
-## <a name="tools"></a><span data-ttu-id="c2445-116">ツール</span><span class="sxs-lookup"><span data-stu-id="c2445-116">Tools</span></span>
+## <a name="tools"></a><span data-ttu-id="4dd85-116">ツール</span><span class="sxs-lookup"><span data-stu-id="4dd85-116">Tools</span></span>
 
 [!include[Contract.Invariant or Contract.Requires<TException> do not consider String.IsNullOrEmpty to be pure](~/includes/migration-guide/runtime/tools/contractinvariant-contractrequirestexception-do-not-consider.md)]
 
-## <a name="web-application"></a><span data-ttu-id="c2445-117">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="c2445-117">Web Application</span></span>
+## <a name="web-applications"></a><span data-ttu-id="4dd85-117">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="4dd85-117">Web Applications</span></span>
 
-[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web application/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
+[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="c2445-118">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="c2445-118">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="4dd85-118">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="4dd85-118">Windows Communication Foundation (WCF)</span></span>
 
 [!include[MinFreeMemoryPercentageToActiveService is now respected](~/includes/migration-guide/runtime/wcf/minfreememorypercentagetoactiveservice-now-respected.md)]
 
@@ -136,7 +136,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[WCF services that use NETTCP with SSL security and MD5 certificate authentication](~/includes/migration-guide/runtime/wcf/wcf-services-that-use-nettcp-with-ssl-security-md5-certificate.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="c2445-119">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="c2445-119">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="4dd85-119">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="4dd85-119">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Accessing a WPF DataGrid's selected items from a handler of the DataGrid's UnloadingRow event can cause a NullReferenceException](~/includes/migration-guide/runtime/wpf/accessing-wpf-datagrids-selected-items-from-handler-unloadingrow-event-can.md)]
 
@@ -168,7 +168,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[WPF windows are rendered without clipping when extending outside a single monitor](~/includes/migration-guide/runtime/wpf/wpf-windows-are-rendered-without-clipping-when-extending-outside-single.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="c2445-120">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="c2445-120">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="4dd85-120">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="4dd85-120">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Workflow now throws original exception instead of NullReferenceException in some cases](~/includes/migration-guide/runtime/wf/workflow-now-throws-original-exception-instead-nullreferenceexception-some.md)]
 
