--- a/docs/framework/migration-guide/runtime/4.6.2-4.7.2.md
+++ b/docs/framework/migration-guide/runtime/4.6.2-4.7.2.md
@@ -4,39 +4,39 @@ ms.date: 04/03/2018
 ms.assetid: f47ff5f4-3c59-4f08-8494-d380c609c25c
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: b02a996dfb194ebd14564aea421f437716791467
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 421e92cceb628cd2083cfd7af9f1f2ab14b7465f
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-462-to-472"></a><span data-ttu-id="c006a-102">.NET Framework 4.6.2 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="c006a-102">Runtime Changes for Migration from .NET Framework 4.6.2 to 4.7.2</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-462-to-472"></a><span data-ttu-id="a24ae-102">.NET Framework 4.6.2 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="a24ae-102">Runtime Changes for Migration from .NET Framework 4.6.2 to 4.7.2</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="c006a-103">.NET Framework 4.6.2 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="c006a-103">If you are migrating from the .NET Framework 4.6.2 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="a24ae-103">.NET Framework 4.6.2 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="a24ae-103">If you are migrating from the .NET Framework 4.6.2 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="core"></a><span data-ttu-id="c006a-104">コア</span><span class="sxs-lookup"><span data-stu-id="c006a-104">Core</span></span>
+## <a name="core"></a><span data-ttu-id="a24ae-104">コア</span><span class="sxs-lookup"><span data-stu-id="a24ae-104">Core</span></span>
 
 [!include[Allow Unicode in URIs that resemble UNC shares](~/includes/migration-guide/runtime/core/allow-unicode-uris-that-resemble-unc-shares.md)]
 
 [!include[Support special relative URI notation when Unicode is present](~/includes/migration-guide/runtime/core/support-special-relative-uri-notation-when-unicode-present.md)]
 
-## <a name="runtime"></a><span data-ttu-id="c006a-105">ランタイム</span><span class="sxs-lookup"><span data-stu-id="c006a-105">Runtime</span></span>
+## <a name="runtime"></a><span data-ttu-id="a24ae-105">ランタイム</span><span class="sxs-lookup"><span data-stu-id="a24ae-105">Runtime</span></span>
 
 [!include[Improved WCF chain trust certificate validation for Net.Tcp certificate authentication](~/includes/migration-guide/runtime/runtime/improved-wcf-chain-trust-certificate-validation-for-nettcp-authentication.md)]
 
-## <a name="security"></a><span data-ttu-id="c006a-106">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="c006a-106">Security</span></span>
+## <a name="security"></a><span data-ttu-id="a24ae-106">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="a24ae-106">Security</span></span>
 
 [!include[RSACng and DSACng are once again usable in Partial Trust scenarios](~/includes/migration-guide/runtime/security/rsacng-dsacng-are-once-again-usable-partial-trust-scenarios.md)]
 
-## <a name="web-application"></a><span data-ttu-id="c006a-107">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="c006a-107">Web Application</span></span>
+## <a name="web-applications"></a><span data-ttu-id="a24ae-107">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="a24ae-107">Web Applications</span></span>
 
-[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web application/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
+[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="c006a-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="c006a-108">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="a24ae-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="a24ae-108">Windows Communication Foundation (WCF)</span></span>
 
 [!include[WCF AddressHeaderCollection now throws an ArgumentException if an addressHeader element is null](~/includes/migration-guide/runtime/wcf/wcf-addressheadercollection-now-throws-an-argumentexception-if-addressheader.md)]
 
@@ -44,7 +44,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[WCF PipeConnection.GetHashAlgorithm now uses SHA256](~/includes/migration-guide/runtime/wcf/wcf-pipeconnectiongethashalgorithm-now-uses-sha256.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="c006a-109">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="c006a-109">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="a24ae-109">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="a24ae-109">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Chained Popups with StaysOpen=False](~/includes/migration-guide/runtime/wpf/chained-popups-with-staysopenfalse.md)]
 
@@ -58,7 +58,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[WPF Printing Stack Update](~/includes/migration-guide/runtime/wpf/wpf-printing-stack-update.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="c006a-110">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="c006a-110">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="a24ae-110">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="a24ae-110">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Workflow now throws original exception instead of NullReferenceException in some cases](~/includes/migration-guide/runtime/wf/workflow-now-throws-original-exception-instead-nullreferenceexception-some.md)]
 
