--- a/docs/framework/migration-guide/runtime/4.7-4.7.2.md
+++ b/docs/framework/migration-guide/runtime/4.7-4.7.2.md
@@ -4,43 +4,43 @@ ms.date: 04/03/2018
 ms.assetid: aebf5f85-1d68-4390-80ac-43f55db519dc
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: f12be770d878efe196a1aca040a50a0a69161f4b
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8a02648144f4da1072b4fc471eb623bf1bd489f4
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-47-to-472"></a><span data-ttu-id="0ea74-102">.NET Framework 4.7 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="0ea74-102">Runtime Changes for Migration from .NET Framework 4.7 to 4.7.2</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-47-to-472"></a><span data-ttu-id="0ac61-102">.NET Framework 4.7 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="0ac61-102">Runtime Changes for Migration from .NET Framework 4.7 to 4.7.2</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="0ea74-103">.NET Framework 4.7 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="0ea74-103">If you are migrating from the .NET Framework 4.7 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="0ac61-103">.NET Framework 4.7 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="0ac61-103">If you are migrating from the .NET Framework 4.7 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="core"></a><span data-ttu-id="0ea74-104">コア</span><span class="sxs-lookup"><span data-stu-id="0ea74-104">Core</span></span>
+## <a name="core"></a><span data-ttu-id="0ac61-104">コア</span><span class="sxs-lookup"><span data-stu-id="0ac61-104">Core</span></span>
 
 [!include[Allow Unicode in URIs that resemble UNC shares](~/includes/migration-guide/runtime/core/allow-unicode-uris-that-resemble-unc-shares.md)]
 
 [!include[Support special relative URI notation when Unicode is present](~/includes/migration-guide/runtime/core/support-special-relative-uri-notation-when-unicode-present.md)]
 
-## <a name="jit"></a><span data-ttu-id="0ea74-105">JIT</span><span class="sxs-lookup"><span data-stu-id="0ea74-105">JIT</span></span>
+## <a name="jit"></a><span data-ttu-id="0ac61-105">JIT</span><span class="sxs-lookup"><span data-stu-id="0ac61-105">JIT</span></span>
 
 [!include[Incorrect code generation when passing and comparing UInt16 values](~/includes/migration-guide/runtime/jit/incorrect-code-generation-when-passing-comparing-uint16-values.md)]
 
-## <a name="runtime"></a><span data-ttu-id="0ea74-106">ランタイム</span><span class="sxs-lookup"><span data-stu-id="0ea74-106">Runtime</span></span>
+## <a name="runtime"></a><span data-ttu-id="0ac61-106">ランタイム</span><span class="sxs-lookup"><span data-stu-id="0ac61-106">Runtime</span></span>
 
 [!include[Improved WCF chain trust certificate validation for Net.Tcp certificate authentication](~/includes/migration-guide/runtime/runtime/improved-wcf-chain-trust-certificate-validation-for-nettcp-authentication.md)]
 
-## <a name="security"></a><span data-ttu-id="0ea74-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="0ea74-107">Security</span></span>
+## <a name="security"></a><span data-ttu-id="0ac61-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="0ac61-107">Security</span></span>
 
 [!include[RSACng and DSACng are once again usable in Partial Trust scenarios](~/includes/migration-guide/runtime/security/rsacng-dsacng-are-once-again-usable-partial-trust-scenarios.md)]
 
-## <a name="web-application"></a><span data-ttu-id="0ea74-108">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="0ea74-108">Web Application</span></span>
+## <a name="web-applications"></a><span data-ttu-id="0ac61-108">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="0ac61-108">Web Applications</span></span>
 
-[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web application/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
+[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="0ea74-109">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="0ea74-109">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="0ac61-109">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="0ac61-109">Windows Communication Foundation (WCF)</span></span>
 
 [!include[WCF AddressHeaderCollection now throws an ArgumentException if an addressHeader element is null](~/includes/migration-guide/runtime/wcf/wcf-addressheadercollection-now-throws-an-argumentexception-if-addressheader.md)]
 
@@ -48,7 +48,7 @@ ms.lasthandoff: 05/04/2018
 
 [!include[WCF PipeConnection.GetHashAlgorithm now uses SHA256](~/includes/migration-guide/runtime/wcf/wcf-pipeconnectiongethashalgorithm-now-uses-sha256.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="0ea74-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="0ea74-110">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="0ac61-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="0ac61-110">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Chained Popups with StaysOpen=False](~/includes/migration-guide/runtime/wpf/chained-popups-with-staysopenfalse.md)]
 
