--- a/docs/framework/migration-guide/runtime/4.7.1-4.7.2.md
+++ b/docs/framework/migration-guide/runtime/4.7.1-4.7.2.md
@@ -4,35 +4,35 @@ ms.date: 04/03/2018
 ms.assetid: 4c81e3de-a748-487a-a349-2e25c0566d0f
 author: chlowell
 ms.author: ronpet
-ms.openlocfilehash: 9730d57461d2e36330ea778e949a6cbe6bcaba92
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 3cd5fb74c1fcaf8d1f2ea561f64b3661f426117e
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-471-to-472"></a><span data-ttu-id="223bd-102">.NET Framework 4.7.1 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="223bd-102">Runtime Changes for Migration from .NET Framework 4.7.1 to 4.7.2</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-471-to-472"></a><span data-ttu-id="32427-102">.NET Framework 4.7.1 から 4.7.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="32427-102">Runtime Changes for Migration from .NET Framework 4.7.1 to 4.7.2</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="223bd-103">.NET Framework 4.7.1 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="223bd-103">If you are migrating from the .NET Framework 4.7.1 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="32427-103">.NET Framework 4.7.1 から 4.7.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="32427-103">If you are migrating from the .NET Framework 4.7.1 to 4.7.2, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="core"></a><span data-ttu-id="223bd-104">コア</span><span class="sxs-lookup"><span data-stu-id="223bd-104">Core</span></span>
+## <a name="core"></a><span data-ttu-id="32427-104">コア</span><span class="sxs-lookup"><span data-stu-id="32427-104">Core</span></span>
 
 [!include[Allow Unicode in URIs that resemble UNC shares](~/includes/migration-guide/runtime/core/allow-unicode-uris-that-resemble-unc-shares.md)]
 
 [!include[Support special relative URI notation when Unicode is present](~/includes/migration-guide/runtime/core/support-special-relative-uri-notation-when-unicode-present.md)]
 
-## <a name="runtime"></a><span data-ttu-id="223bd-105">ランタイム</span><span class="sxs-lookup"><span data-stu-id="223bd-105">Runtime</span></span>
+## <a name="runtime"></a><span data-ttu-id="32427-105">ランタイム</span><span class="sxs-lookup"><span data-stu-id="32427-105">Runtime</span></span>
 
 [!include[Improved WCF chain trust certificate validation for Net.Tcp certificate authentication](~/includes/migration-guide/runtime/runtime/improved-wcf-chain-trust-certificate-validation-for-nettcp-authentication.md)]
 
-## <a name="web-application"></a><span data-ttu-id="223bd-106">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="223bd-106">Web Application</span></span>
+## <a name="web-applications"></a><span data-ttu-id="32427-106">Web アプリケーション</span><span class="sxs-lookup"><span data-stu-id="32427-106">Web Applications</span></span>
 
-[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web application/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
+[!include["dataAnnotations:dataTypeAttribute:disableRegEx" app setting is on by default in .NET Framework 4.7.2](~/includes/migration-guide/runtime/web/dataannotationsdatatypeattributedisableregex-app-setting-on-by-default-net.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="223bd-107">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="223bd-107">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="32427-107">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="32427-107">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Keytips behavior improved in WPF](~/includes/migration-guide/runtime/wpf/keytips-behavior-improved-wpf.md)]
 
