--- a/docs/csharp/misc/cs0709.md
+++ b/docs/csharp/misc/cs0709.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 91040f55-a060-4cc3-b830-f6b771af28d7
 ms.openlocfilehash: 28e142de4ce14e1a31dad7894dd6602a2a3c902b
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33305897"
 ---
 # <a name="compiler-error-cs0709"></a>コンパイラ エラー CS0709
 'derived class': 静的クラス 'base class' から派生できません  
