--- a/docs/csharp/misc/cs0765.md
+++ b/docs/csharp/misc/cs0765.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: adfb1f95-f7b1-4e43-83c2-42e8531eb980
 ms.openlocfilehash: 325ba959c093d3c767030f6c7966422aaa9417d5
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33298396"
 ---
 # <a name="compiler-error-cs0765"></a>コンパイラ エラー CS0765
 定義宣言だけを含む部分メソッドまたは削除された条件付きメソッドは、式ツリーで使用できません  
