--- a/docs/csharp/misc/cs1025.md
+++ b/docs/csharp/misc/cs1025.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 491c186f-cb40-47a9-9656-44fadfa18ae2
 ms.openlocfilehash: 82ca2a58944c3a3bc72dc37a68875174f19984e5
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303804"
 ---
 # <a name="compiler-error-cs1025"></a>コンパイラ エラー CS1025
 単一行コメントか行の終わりが必要です。  
