--- a/docs/csharp/misc/cs1033.md
+++ b/docs/csharp/misc/cs1033.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: eb0f4001-84a6-4918-a648-cf710d038de7
 ms.openlocfilehash: 0a810362722fc145caafeeeac6828d2e5eb60a6d
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303297"
 ---
 # <a name="compiler-error-cs1033"></a>コンパイラ エラー CS1033
 ソース ファイルは、PDB 内で表せる 16,707,565 行の限界を超えているため、デバッグ情報は不正確になります  
