--- a/docs/csharp/misc/cs1561.md
+++ b/docs/csharp/misc/cs1561.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 840f469b-65e1-49c6-99cc-8c1ed130a37b
 ms.openlocfilehash: f92faf09e5dfc93db35c02c859547209fef4d2a8
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33307302"
 ---
 # <a name="compiler-error-cs1561"></a>コンパイラ エラー CS1561
 出力ファイル名が長すぎるか、または無効です。  
