--- a/docs/csharp/misc/cs1649.md
+++ b/docs/csharp/misc/cs1649.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 6355c7f2-157c-441d-8925-500062988636
 ms.openlocfilehash: 3d8952c99781194f33ee316d5fdd18584b11d07c
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33308920"
 ---
 # <a name="compiler-error-cs1649"></a>コンパイラ エラー CS1649
 読み取り専用フィールド 'identifier' のメンバーに ref または out を渡すことはできません (静的コンストラクターでは可)。  
