--- a/docs/csharp/misc/cs2003.md
+++ b/docs/csharp/misc/cs2003.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 87ce44c8-ed0f-40d1-8c13-8edb998fabb8
 ms.openlocfilehash: 0ed2b5e1e117a0bc82635263fd056aa33d1e341b
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33305871"
 ---
 # <a name="compiler-error-cs2003"></a>コンパイラ エラー CS2003
 応答ファイル 'file' が複数回含まれていました  
