--- a/docs/framework/migration-guide/retargeting/4.5.1-4.5.2.md
+++ b/docs/framework/migration-guide/retargeting/4.5.1-4.5.2.md
@@ -9,6 +9,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33386445"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-451-to-452"></a><span data-ttu-id="696c2-102">.NET Framework 4.5.1 から 4.5.2 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="696c2-102">Retargeting Changes for Migration from .NET Framework 4.5.1 to 4.5.2</span></span>
 
