--- a/docs/csharp/misc/cs0667.md
+++ b/docs/csharp/misc/cs0667.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: d7fd9a41-100f-47a1-8f59-d0832c1587fa
 ms.openlocfilehash: 8194b3ffd7b73b0113f42877aef812e4b456c1f1
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33301321"
 ---
 # <a name="compiler-error-cs0667"></a>コンパイラ エラー CS0667
 機能 'invalid feature' は非推奨とされます。 代わりに 'valid feature' を使用してください。  
